# backend

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/: configs.py  main.py
app/adapter/incoming/web/: cote.py  test.py  user.py
app/adapter/outbound/: cote_crud.py  cote_lock_key.py  github_oauth.py  redis_concurrency.py  redis_session.py  testing_helper.py  token.py  user_create.py
app/application/entity/: cote.py  message.py  user.py
app/configs/: __init__.py
app/db/models/: __init__.py  cote.py  message.py  user.py
app/dependency/: auth.py  db.py  oauth_service.py  redis.py
app/domain/entity/: __init__.py  cote.py  message.py  user.py
app/domain/model/: cote.py  repository.py  user.py
app/domain/service/: cote_crud_service.py  github_oauth_sign_in.py
app/domains/cote/: crud.py  router.py  schema.py  service.py
app/domains/oauth/: __init__.py  github.py  schema.py
app/domains/test/: router.py
app/domains/user/: crud.py  request.py  response.py  router.py  service.py
app/entity/: cote.py  message.py  user.py
app/exception/: __init__.py  handler.py
app/exceptions/: __init__.py  error_code.py
app/legacy/middlewares/: auth.py
app/legacy/utils/: jwt.py  redis_client.py  testing_helper.py
app/middlewares/: auth.py
app/port/outbound/: concurrency_port.py  cote_crud.py  cote_lock_key.py  oauth.py  token.py  user_create.py
app/utils/: jwt.py  password.py  redis_client.py  testing_helper.py
scripts/: create_database.sh  db_setup.sh  mysql.sh
tests/: test_example.py
(+30 files in other folders)
