[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Elliot Yim <yimsb02@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic = {extras = ["dotenv"], version = "^2.5.2"}
sqlalchemy = "^2.0.23"
mysqlclient = "^2.2.0"
bcrypt = "^4.1.1"
python-dotenv = "1.0.0"
python-multipart = "^0.0.6"
pyjwt = "^2.8.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
